--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -3,7 +3,10 @@ on: push
 
 jobs:
   bench:
-    runs-on: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
 
@@ -17,7 +20,7 @@ jobs:
         
       - if: ${{ steps.cache-measurements.outputs.cache-hit != 'true' }}
         name: Generate measurements.txt
-        run: python ./scripts/create_measurements.py
+        run: python ./scripts/create_measurements.py 1_000_000_000
       
       - name: Build
         run: cargo build -r
