--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -33,6 +33,8 @@ jobs:
   generate-measurement:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - name: Cache measurements.txt
         id: cache-measurements
         uses: actions/cache@v3
