--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -17,10 +17,10 @@ jobs:
           toolchain: nightly
         
       - name: Cache measurements.txt
-        id: cache-measurements
+        id: measurements
         uses: actions/cache@v3
         env:
-          cache-name: cache-measurements
+          cache-name: measurements
         with:
           path: ./measurements.txt
           key: measurements
@@ -35,13 +35,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Cache measurements.txt
-        id: cache-measurements
+        id: measurements
         uses: actions/cache@v3
         env:
-          cache-name: cache-measurements
+          cache-name: measurements
         with:
           path: ./measurements.txt
           key: measurements
+          lookup-only: true
         
         
       - if: ${{ steps.cache-measurements.outputs.cache-hit != 'true' }}
