WINDOWS SHUT THE FUCK UP

--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -24,6 +24,7 @@ jobs:
         with:
           path: ./measurements.txt
           key: measurements
+          enableCrossOsArchive: true
 
       - name: Build
         run: cargo +nightly build -r
@@ -42,9 +43,7 @@ jobs:
         with:
           path: ./measurements.txt
           key: measurements
-          # lookup-only: true
-
-
+          enableCrossOsArchive: true
       - if: ${{ steps.measurements.outputs.cache-hit != 'true' }}
         name: Generate measurements.txt
         run: python ./scripts/create_measurements.py 1_000_000_000
