why the fuck is this memory leaking

--- a/scripts/create_measurements/Cargo.toml
+++ b/scripts/create_measurements/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dashmap = { version = "6.0.1", features = ["inline", "rayon"] }
+rand = "0.8.5"
+rand_distr = "0.4.3"
+rayon = "1.10.0"
