--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+better-panic = "0.3.0"
 dashmap = { version = "6.0.1", features = ["rayon", "inline", "serde"] }
 memmap2 = "0.9.4"
 once_cell = "1.19.0"
 rayon = "1.10.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+
+[workspace]
+members = [".", "scripts/create_measurements"]
