--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -44,7 +44,62 @@ jobs:
           path: ./measurements.txt
           key: measurements
           enableCrossOsArchive: true
+      - name: Install minimal nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
       - if: ${{ steps.measurements.outputs.cache-hit != 'true' }}
         name: Generate measurements.txt
         working-directory: scripts/create_measurements
-        run: cargo +nightly run -r -- 1_000_000_000
+        run: cargo +nightly run -r -- 1000000000
+      - if: ${{ steps.measurements.outputs.cache-hit != 'true' }}
+        name: move the measurements.txt
+        run: mv measurements.txt ../../
+        working-directory: scripts/create_measurements
+
+  hyperfinery:
+    needs: generate-measurement
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install minimal nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+      - name: Install hyperfine
+        run: cargo +nightly install hyperfine
+      - name: Cache measurements.txt
+        id: measurements
+        uses: actions/cache@v3
+        env:
+          cache-name: measurements
+        with:
+          path: ./measurements.txt
+          key: measurements
+          enableCrossOsArchive: true
+      - name: Build
+        run: cargo +nightly build -r
+      - name: checkout 1brc
+        uses: actions/checkout@v4
+        with:
+          repository: gunnarmorling/1brc
+          path: 1brc
+      - name: install graal 21.0.2
+        uses: graalvm/setup-graalvm@v1
+        with:
+          distribution: 'graalvm'
+          java-version: '21.0.2'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: maven the fuck out of 1brc
+        working-directory: 1brc
+        run: mvn clean verify
+      - name: Compile time!!!!!!
+        run: native-image -O3 -H:TuneInlinerExploration=1 -march=native --enable-preview --initialize-at-build-time=dev.morling.onebrc.CalculateAverage_thomaswue\$Scanner --gc=epsilon -H:-GenLoopSafepoints -cp target/average-1.0.0-SNAPSHOT.jar -o ../CalculateAverage_thomaswue_image
+        working-directory: 1brc
+      - name: run!!
+        run: hyperfine -w 1 -N 1 -r 1 './CalculateAverage_thomaswue_image' './target/release/lalalalalala'
