CAN YOU SHUT THE FUCK UP

--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -116,8 +116,13 @@ jobs:
         run: native-image -O3 -H:TuneInlinerExploration=1 -march=native --enable-preview --initialize-at-build-time=dev.morling.onebrc.CalculateAverage_thomaswue\$Scanner --gc=epsilon -H:-GenLoopSafepoints -cp target/average-1.0.0-SNAPSHOT.jar -o ../CalculateAverage_thomaswue_image dev.morling.onebrc.CalculateAverage_thomaswue
         working-directory: 1brc
 
-      - name: move the rust binary thingy
+      - name: move the rust binary thingy (windows AUGGGGGGGGHHHHHHH)
+        run: mv target/release/lalalalalala.exe .
+        if: runner.os == 'Windows'
+
+      - name: move the rust binary thingy (linux yay)
         run: mv target/release/lalalalalala .
+        if: runner.os != 'Windows'
 
       - name: run!!! (Linux is awesome!!!!)
         run: hyperfine -w 1 './CalculateAverage_thomaswue_image' './lalalalalala'
