BRO I AM WASTING MY GH ACTIONS TIME OMG FUCK THIS

--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -46,6 +46,7 @@ jobs:
           path: ./measurements.txt
           key: measurements
           enableCrossOsArchive: true
+          lookup-only: true
 
       - if: ${{ steps.measurements.outputs.cache-hit != 'true' }}
         name: Install minimal nightly
