--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 [dependencies]
 better-panic = "0.3.0"
 dashmap = { version = "6.1.0", features = ["rayon", "inline", "serde"] }
+fnv = "1.0.7"
+fxhash = "0.2.1"
 memmap2 = "0.9.5"
 once_cell = "1.21.1"
 rayon = "1.10.0"
-serde = { version = "1.0.219", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = "1.0.140"
 
 [workspace]
