--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -70,7 +70,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest, timmy]
     steps:
       - uses: actions/checkout@v4
         
